# Templates

./: Dockerfile  desktop_entry  dnd.css  index.html
C/: test.c
CMakeLists.txt.d/exe/: CMakeLists.txt
CMakeLists.txt.d/shared_lib/: CMakeLists.txt
Makefile.d/exe/: Makefile  Makefile_cc65  Makefile_docker  Makefile_hoot  Makefile_test
atari/: src.asm
gui/: racket-gui.rkt
python/: pyproject.toml
webapp/: index.html  script.js  styles.css
